--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                         <a href="Lesson 1/index.html">Урок 1</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="Lesson 2/index.html">Урок 2</a>
+                        <a href="Lesson 8/index.html">Урок 8</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="Lesson 13/index.html">Урок 13</a>
                     </li>
                 </ul>
             </div>
