--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -84,7 +84,7 @@
     <nav></nav>
 </footer>
 
-<!-- Третий сайт  -->
+<!-- Третий сайт habr.ccon/ru-->
 <header>
     <article>
         <section></section>
