--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                         <a href="Lesson 13/index.html">Урок 13</a>
                     </li>
                     <li class="content__list-item">
+                        <a href="Lesson 16/index.html">Урок 16</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="Lesson 21/index.html">Урок 21</a>
                     </li>
                 </ul>
