--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <li class="content__list-item">
                         <a href="Lesson 21/index.html">Урок 21</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="Lesson 28/index.html">Урок 28</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
